<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="121dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/alert_dialog_background"
    android:layout_marginHorizontal="20dp">
    <TextView
        android:text="@string/notes_note_delete_alert_dialog"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <Button
            android:id="@+id/negativeButton"
            android:text="@string/notes_note_no_text"
            style="@style/AlertButton.Negative"
            />
        <Button
            android:id="@+id/positiveButton"
            android:text="@string/notes_note_yes_text"
            style="@style/AlertButton.Positive"
            android:layout_marginStart="24dp"
            />
    </LinearLayout>
</LinearLayout>